tests/explicit-nulls/pos/unsafe-java-varargs-src/J.java
abstract class J {
  abstract void foo(String... x);
}