tests/explicit-nulls/neg/interop-array-src/J.java
class J {
	void foo(String[] ss) {}
}
